--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,12 @@
 @import './vars.scss';
 
+@import './filebrowser.scss';
+
+
+
 html, body, #root {
-  background-color: white;
+  background-color: var(--color-darker);
+  color: var(--color-light);
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   height: 100vh;
@@ -10,24 +15,26 @@ html, body, #root {
 }
 
 #root {
-  display: flex;
-  flex-direction: column;
 
-  #drawer {
-    display: grid;
-    flex-grow: 1;
-    grid-template-columns: auto 400px;
-  }
+  display: grid;
+  grid-template-columns: 400px auto;
+  grid-template-rows: auto 300px;
+
+  // display: flex;
+  // flex-direction: column;
+
+  // #drawer {
+  //   display: grid;
+  //   flex-grow: 1;
+  //   grid-template-columns: auto 400px;
+  // }
 }
 
 
 #controls {
   background-color: purple;
-  height: 20rem;
-}
-
-#file-browser {
-  background-color: rgba(red, .5);
+  height: 100%;
+  grid-column: span 2;
 }
 
 #playlist {
