--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -3,7 +3,7 @@ $grey-darker: #333;
 $grey-light: #aaa;
 $grey-lighter: #eee;
 
-$accent: #1d511d;
+$accent: #6db966;
 
 :root {
   --color-accent: #{$accent};
