--- a/src/scss/sections/playlist.scss
+++ b/src/scss/sections/playlist.scss
@@ -1,3 +1,7 @@
 #playlist {
-  background-color: red;
+  background-color: rgb(121, 89, 89);
+  box-sizing: border-box;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 20px;
 }
