--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,7 +34,7 @@ html, body, #root {
     #filebrowser {
       display: flex;
       flex-direction: column;
-      max-width: 800px;
+      width: 800px;
     }
   }
 }
