🚧 Working on Controls

--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -6,6 +6,8 @@ $grey-lighter: rgb(238, 238, 238);
 
 $accent: #6db966;
 
+$gutter: 1rem;
+
 :root {
   --color-accent: #{$accent};
   --color-black: #{$grey-black};
