--- a/src/scss/sections/filebrowser.scss
+++ b/src/scss/sections/filebrowser.scss
@@ -1,7 +1,3 @@
-@use 'sass:math';
-
-$grid-gap: 1em;
-
 #filebrowser {
   .filebrowser {
     &__actions {
@@ -9,9 +5,9 @@ $grid-gap: 1em;
       background-color: var(--color-black);
       border-bottom: 1px solid var(--color-light);
       display: grid;
-      grid-gap: $grid-gap;
+      grid-gap: $gutter;
       grid-template-columns: 1fr auto auto;
-      padding: math.div($grid-gap, 2) $grid-gap;
+      padding: math.div($gutter, 2) $gutter;
     }
 
     &__breadcrumbs {
@@ -39,10 +35,10 @@ $grid-gap: 1em;
     &__item {
       border-bottom: 1px solid var(--color-dark);
       display: grid;
-      grid-gap: $grid-gap;
+      grid-gap: $gutter;
       grid-template-columns: 1fr auto;
-      margin: math.div($grid-gap, 2) $grid-gap;
-      padding-bottom: math.div($grid-gap, 2);
+      margin: math.div($gutter, 2) $gutter;
+      padding-bottom: math.div($gutter, 2);
 
 
       &.dir {
@@ -63,9 +59,10 @@ $grid-gap: 1em;
       }
 
       &-ext {
+        text-align: right;
         font-style: italic;
-        font-size: .8em;
-        margin-top: 1em;
+        font-size: .7em;
+        margin-top: .5em;
       }
     }
 
