--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,8 +6,9 @@
 @import './common/imports';
 @import './sections/imports';
 
-
-html, body, #root {
+html,
+body,
+#root {
   background-color: var(--color-darker);
   color: var(--color-light);
   font-family: Arial, Helvetica, sans-serif;
