--- a/src/scss/sections/filebrowser.scss
+++ b/src/scss/sections/filebrowser.scss
@@ -17,9 +17,8 @@
       overflow: hidden;
       max-width: 100%;
       text-overflow: ellipsis;
-      transition: all .3s;
+      transition: all 0.3s;
       white-space: nowrap;
-
     }
 
     &__current {
@@ -39,7 +38,6 @@
       grid-template-columns: 1fr auto;
       margin: math.div($gutter, 2) $gutter;
       padding-bottom: math.div($gutter, 2);
-
 
       &.dir {
         cursor: pointer;
@@ -61,8 +59,8 @@
       &-ext {
         text-align: right;
         font-style: italic;
-        font-size: .7em;
-        margin-top: .5em;
+        font-size: 0.7em;
+        margin-top: 0.5em;
       }
     }
 
@@ -73,10 +71,14 @@
       div {
         cursor: pointer;
         font-weight: bold;
-        padding: 0 .5em;
+        padding: 0 0.5em;
 
-        &:first-child { padding-left: 0; }
-        &:last-child { padding-right: 0; }
+        &:first-child {
+          padding-left: 0;
+        }
+        &:last-child {
+          padding-right: 0;
+        }
 
         &:hover {
           color: var(--color-accent);
