🚧 Styled Controls for sm

--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -1,3 +1,7 @@
+// Breakpoints
+// md: 768px
+// lg: 1200px
+
 $grey-black: rgb(32, 32, 32);
 $grey-dark: rgb(102, 102, 102); //#666;
 $grey-darker: rgb(51, 51, 51); //#333;
