--- a/src/scss/common/buttons.scss
+++ b/src/scss/common/buttons.scss
@@ -7,6 +7,7 @@ select {
   border: 2px solid var(--color-light);
   box-sizing: border-box;
   color: var(--color-light);
+  cursor: pointer;
   display: inline-flex;
   font-size: 1.25rem;
   height: 2.5rem;
@@ -20,10 +21,16 @@ select {
   &:hover {
     border-color: var(--color-accent);
     color: var(--color-accent);
-    cursor: pointer;
+  }
+
+  &.--active {
+    border-color: var(--color-accent);
+    color: var(--color-accent);
   }
 }
 
 select {
-  width: auto;
+  text-align: right;
+  font-size: 1rem;
+  width: 100%;
 }
