--- a/src/scss/sections/_imports.scss
+++ b/src/scss/sections/_imports.scss
@@ -1,4 +1,5 @@
 @import './controls.scss';
 @import './filebrowser.scss';
 @import './playlist.scss';
+@import './seek.scss';
 @import './volume.scss';
