--- a/src/scss/common/slider.scss
+++ b/src/scss/common/slider.scss
@@ -2,6 +2,7 @@
   cursor: pointer;
   position: relative;
   user-select: none;
+  width: 100%;
 
   &__path {
     background-color: var(--color-lighter);
