--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -1,6 +1,9 @@
 // Breakpoints
-// md: 768px
-// lg: 1200px
+$sm: '(max-width: 576px)';
+$md: '(min-width: 577px)';
+$lg: '(min-width: 1024px)';
+$xl: '(min-width: 1280px)';
+$xxl: '(min-width: 1400px)';
 
 $grey-black: rgb(32, 32, 32);
 $grey-dark: rgb(102, 102, 102); //#666;
