--- a/src/scss/sections/controls.scss
+++ b/src/scss/sections/controls.scss
@@ -2,8 +2,16 @@
   background-color: var(--color-black);
   display: grid;
   grid-template-rows: repeat(3, fit-content(100%));
-  grid-gap: math.div($gutter, 2);
-  padding: math.div($gutter, 2) $gutter;
+  grid-gap: $gutter;
+  padding: $gutter;
+
+  @media #{$lg} {
+    grid-template-columns: 2fr 1fr;
+
+    .controls__current {
+      grid-column: span 2;
+    }
+  }
 
   .controls {
     &__actions {
@@ -49,14 +57,14 @@
       }
     }
 
-    &__current {
-      font-size: 0.8em;
+    &__bars {
+      display: grid;
+      grid-gap: math.div($gutter, 2);
+      grid-template-rows: 1fr 1fr;
     }
 
-    &__play {
-      // grid-area: 5 / 1 / span 2 / span 2;
-      height: 100%;
-      width: 100%;
+    &__current {
+      color: var(--color-lighter);
     }
   }
 }
