--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,13 +35,12 @@ body,
     }
 
     #filebrowser {
-
       @media #{$lg} {
         position: relative;
         width: 50%;
 
         .filebrowser {
-          transition: all .3s;
+          transition: all 0.3s;
           &__handle {
             display: none;
           }
