--- a/src/scss/sections/filebrowser.scss
+++ b/src/scss/sections/filebrowser.scss
@@ -27,7 +27,7 @@
       border-bottom: 1px solid var(--color-light);
       display: grid;
       grid-gap: $gutter;
-      grid-template-columns: 1fr auto auto;
+      grid-template-columns: 1fr auto;
       padding: math.div($gutter, 2) $gutter;
     }
 
@@ -40,6 +40,20 @@
       text-overflow: ellipsis;
       transition: all 0.3s;
       white-space: nowrap;
+    }
+
+    &__buttons {
+      button {
+        margin: 0 math.div($gutter, 4);
+
+        &:first-child {
+          margin-left: 0;
+        }
+
+        &:last-child {
+          margin-right: 0;
+        }
+      }
     }
 
     &__current {
