--- a/src/scss/sections/_imports.scss
+++ b/src/scss/sections/_imports.scss
@@ -1,5 +1,6 @@
 @import './controls.scss';
 @import './filebrowser.scss';
+@import './password.scss';
 @import './playlist.scss';
 @import './seek.scss';
 @import './volume.scss';
