--- a/src/scss/sections/filebrowser.scss
+++ b/src/scss/sections/filebrowser.scss
@@ -88,7 +88,7 @@
       padding-bottom: math.div($gutter, 2);
 
       &.dir {
-        @include hover(var(--color-accent), color);
+        @include hover(var(--color-accent), border-color, color);
         cursor: pointer;
         transition: all 0.3s;
       }
@@ -116,6 +116,7 @@
       display: flex;
 
       div {
+        @include hover(var(--color-accent), color);
         cursor: pointer;
         font-weight: bold;
         padding: 0 0.5em;
@@ -125,10 +126,6 @@
         }
         &:last-child {
           padding-right: 0;
-        }
-
-        &:hover {
-          color: var(--color-accent);
         }
       }
     }
