🚧 Fixed FileBrowser scrolling

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -45,7 +45,7 @@ body,
             display: none;
           }
           &__browser {
-            display: block;
+            display: flex;
           }
         }
       }
